# Plonky3

baby-bear/: Cargo.toml
bn254-fr/: Cargo.toml
challenger/: Cargo.toml
circle/: Cargo.toml
commit/: Cargo.toml
commit/src/: lib.rs
dft/: Cargo.toml
dft/benches/: coset_shift.rs
dft/src/: naive.rs  radix_2_bowers.rs  radix_2_dit.rs  radix_2_dit_parallel.rs  radix_2_small_batch.rs  traits.rs  util.rs
examples/: Cargo.toml
examples/src/: dfts.rs
field/: Cargo.toml
field-testing/: Cargo.toml
field-testing/src/: dft_testing.rs
fri/: Cargo.toml
fri/src/: hiding_pcs.rs
goldilocks/: Cargo.toml
keccak-air/: Cargo.toml
keccak-air/src/: air.rs  columns.rs
koala-bear/: Cargo.toml
matrix/: Cargo.toml
matrix/src/: util.rs
merkle-tree/: Cargo.toml
mersenne-31/: Cargo.toml
mersenne-31/src/: dft.rs  radix_2_dit.rs
monty-31/: Cargo.toml
monty-31/src/dft/: mod.rs
poseidon2-air/: Cargo.toml
poseidon2-air/src/: columns.rs
uni-stark/: Cargo.toml
uni-stark/src/: symbolic_expression.rs
uni-stark/tests/: mul_air.rs
