[package]
name = "p3-commit"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
p3-field.workspace = true
p3-matrix.workspace = true
p3-util.workspace = true

itertools.workspace = true
serde.workspace = true

[dev-dependencies]
p3-challenger.workspace = true
p3-dft.workspace = true
